--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,9 @@ body {
 body {
   display: flex;
   flex-direction: column;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 .main {
@@ -23,4 +26,12 @@ body {
 
 .hide-overflow {
   overflow: hidden;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin: 0 auto;
+  max-width: 1200px;
 }
