--- a/app/src/components/FlightDetails/Timeline/Timeline.module.scss
+++ b/app/src/components/FlightDetails/Timeline/Timeline.module.scss
@@ -15,7 +15,7 @@
     font-size: 18px;
   }
 
-  .layovers {
+  .transfers {
     position: relative;
     display: flex;
     justify-content: center;
